2003-10-26  John Levon  <levon@movementarian.org>

	* HACKING:
	* configure.in:
	* Makefile.am:
	* dae/: move all of 2.4 daemon code to ...

	* daemon/liblegacy/: here

	* daemon/Makefile.am:
	* daemon/opd_util.h:
	* daemon/opd_util.c: move to ...

	* daemon/oprofiled.h:
	* daemon/oprofiled.c: here, and call the right operations
	depending upon oprofile kernel version.

	* daemon/init.c:
	* daemon/liblegacy/init.c: init and running for each version

2003-10-26  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.c: make sure to create the
	cookie for the ignore value if it's not found

	* daemon/opd_sfile.c: simplify ignored logic

2003-10-26  John Levon  <levon@movementarian.org>

	* doc/internals.xml:
	* doc/buffers.png: add a diagram

2003-10-26  Philippe Elie  <phil.el@wanadoo.fr>

	implement image filtering:

	* dae/opd_image.h: add a field filtered
	* dae/opd_image.c: set it at image creation
	* dae/opd_proc.c: don't record sample when !image->filtered

	* daemon/opd_cookie.h: add a field filtered
	* daemon/opd_cookie.c: set it a cookie_entry creation.
	* daemon/opd_sfile.h: add a field filtered
	* daemon/opd_file.c: set it a opd_sfile struct creation
	* daemon/opd_trans.c: record sample if filtered

	* daemon/opd_util.h: export opd_hash_name(), is_image_filtered()
	* daemon/opd_util.c: implement --image=xxx

	* oprofiled.c: #include "config.h" not <>

	* utils/opcontrol: handle --image

2003-10-26  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: remove some outdated stuff

2003-10-25  John Levon  <levon@movementarian.org>

	* doc/internals.xml: more docs

2003-10-25  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: cleanups

2003-10-24  John Levon  <levon@movementarian.org>

	* doc/internals.xml: write some more

2003-10-23  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.7.1cvs

2003-10-22  John Levon  <levon@movementarian.org>

	* libop/tests/Makefile.am:
	* libop/tests/load_events_files_tests.c: