@@ -1,5 +1,5 @@
 /**
- * @file dae/opd_image.h
+ * @file opd_image.h
  * Management of binary images
  *
  * @remark Copyright 2002 OProfile authors
